Updating portfolio projects

--- a/index.html
+++ b/index.html
@@ -83,60 +83,42 @@
                 <p class="section-subtitle">A selection of projects demonstrating our technical capabilities and commitment to quality.</p>
             </div>
             <div class="project-grid">
+                <!-- Project 1: ZenAI -->
                 <div class="project-card" 
-                     data-title="Mood Classification Application" 
+                     data-title="ZenAI - Mood Classification Application" 
                      data-img="/Images/ZenAI.png" 
-                     data-desc="This project explores the application of Natural Language Processing (NLP) to create an empathetic user interface. The system analyzes text input to classify the user's emotional state, enabling it to provide tailored responses and direct users to appropriate wellness resources. The primary focus was on developing a responsive, private, and non-intrusive user experience."
+                     data-desc="ZenAI is an innovative wellness application that explores the application of Natural Language Processing (NLP) to create an empathetic user interface. The system analyzes text input to classify the user's emotional state, enabling it to provide tailored, supportive responses and direct users to appropriate wellness resources. The primary focus was on developing a responsive, private, and non-intrusive user experience."
                      data-tech="Prototyping,UI/UX,Figma,Frontend"
                      data-link="https://embed.figma.com/design/DapO9DD1rwjZznHEF0JMp9/AI-Powered-Mental-Health-Assistant?node-id=0-1&embed-host=share">
                     <div class="project-image">
-                        <img src="/Images/ZenAI.png" alt="ZenAI" class="project-img">
+                        <img src="/Images/ZenAI.png" alt="ZenAI Project Image" class="project-img">
                     </div>
                     <div class="project-info">
-                        <h3>Mood Classification Application</h3>
-                        <p class="project-description">A proof-of-concept for an AI-powered wellness assistant designed to classify user sentiment and provide supportive feedback.</p>
+                        <h3>ZenAI - Mood Classification App</h3>
+                        <p class="project-description">An AI-powered wellness assistant designed to classify user sentiment and provide supportive feedback through an empathetic interface.</p>
                         <div class="tech-stack">
-                            <span class="tech-tag">Prototyping</span>
+                            <span class="tech-tag">AI/ML</span>
                             <span class="tech-tag">UI/UX</span>
                         </div>
                         <button class="btn btn-outline btn-details">View Details</button>
                     </div>
                 </div>
 
+                <!-- Project 2: Resume Builder -->
                 <div class="project-card" 
-                     data-title="E-Commerce Platform API" 
-                     data-img="https://images.unsplash.com/photo-1522199755839-a2bacb67c546?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w1Nzc0MTR8MHwxfGFsbHx8fHx8fHx8fDE3MjA5NDU1MDh8&ixlib=rb-4.0.3&q=80&w=1080" 
-                     data-desc="This project involved designing and building a secure and scalable RESTful API for a modern e-commerce platform. Key features include user authentication, product inventory management, order processing, and integration with a third-party payment gateway. The API is built on a microservices architecture using Java and Spring Boot for high availability and performance."
-                     data-tech="Java,Spring Boot,REST API,Backend"
+                     data-title="Dynamic Resume Builder" 
+                     data-img="https://images.unsplash.com/photo-1586281380349-632531db7ed4?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w1Nzc0MTR8MHwxfGFsbHx8fHx8fHx8fDE3MjA5NDU1MDh8&ixlib=rb-4.0.3&q=80&w=1080" 
+                     data-desc="The Dynamic Resume Builder is a web application that empowers users to create, customize, and export professional resumes with ease. It features a user-friendly interface with multiple templates and real-time previews. The backend, built with C#, handles user data securely and generates polished PDF documents on the fly. This project showcases our ability to build practical, data-driven applications with a focus on a clean user workflow."
+                     data-tech="C#,ASP.NET,JavaScript,Full-Stack"
                      data-link="#">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1522199755839-a2bacb67c546?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w1Nzc0MTR8MHwxfGFsbHx8fHx8fHx8fDE3MjA5NDU1MDh8&ixlib=rb-4.0.3&q=80&w=1080" alt="Placeholder Project Image" class="project-img">
+                        <img src="https://images.unsplash.com/photo-1586281380349-632531db7ed4?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w1Nzc0MTR8MHwxfGFsbHx8fHx8fHx8fDE3MjA5NDU1MDh8&ixlib=rb-4.0.3&q=80&w=1080" alt="Resume Builder Project Image" class="project-img">
                     </div>
                     <div class="project-info">
-                        <h3>E-Commerce Platform API</h3>
-                        <p class="project-description">A secure and scalable RESTful API for an e-commerce platform, featuring inventory management and order processing.</p>
+                        <h3>Dynamic Resume Builder</h3>
+                        <p class="project-description">A full-stack application that allows users to create, manage, and export professional resumes from customizable templates.</p>
                         <div class="tech-stack">
-                            <span class="tech-tag">Java</span>
-                            <span class="tech-tag">Backend</span>
-                        </div>
-                        <button class="btn btn-outline btn-details">View Details</button>
-                    </div>
-                </div>
-
-                <div class="project-card" 
-                     data-title="Data Visualization Dashboard" 
-                     data-img="https://images.unsplash.com/photo-1460925895917-afdab827c52f?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w1Nzc0MTR8MHwxfGFsbHx8fHx8fHx8fDE3MjA5NDU1MDh8&ixlib=rb-4.0.3&q=80&w=1080" 
-                     data-desc="An interactive web-based dashboard for visualizing complex sales data. This application connects to a live database, processes the data, and presents it through a variety of dynamic charts and graphs. Built with Python (Flask) on the backend and JavaScript on the frontend, it allows users to filter data by date, region, and product category to gain actionable insights."
-                     data-tech="Python,JavaScript,Data Viz,Full-Stack"
-                     data-link="#">
-                    <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w1Nzc0MTR8MHwxfGFsbHx8fHx8fHx8fDE3MjA5NDU1MDh8&ixlib=rb-4.0.3&q=80&w=1080" alt="Placeholder Project Image" class="project-img">
-                    </div>
-                    <div class="project-info">
-                        <h3>Data Visualization Dashboard</h3>
-                        <p class="project-description">An interactive dashboard for visualizing sales data with dynamic charts, graphs, and filtering capabilities.</p>
-                        <div class="tech-stack">
-                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">C#</span>
                             <span class="tech-tag">Full-Stack</span>
                         </div>
                         <button class="btn btn-outline btn-details">View Details</button>
