--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </a>
             <div class="nav-menu-wrapper">
                 <ul class="nav-menu">
-                    <li><a href="#home" class="nav-link">Home</a></li>
+                    <li><a href="#home" class="nav-link">Away</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#projects" class="nav-link">Projects</a></li>
                     <li><a href="#team" class="nav-link">Team</a></li>
