--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                      data-title="Dynamic Resume Builder" 
                      data-img="https://images.unsplash.com/photo-1586281380349-632531db7ed4?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w1Nzc0MTR8MHwxfGFsbHx8fHx8fHx8fDE3MjA5NDU1MDh8&ixlib=rb-4.0.3&q=80&w=1080" 
                      data-desc="The Dynamic Resume Builder is a web application that empowers users to create, customize, and export professional resumes with ease. It features a user-friendly interface with multiple templates and real-time previews. The backend, built with C#, handles user data securely and generates polished PDF documents on the fly. This project showcases our ability to build practical, data-driven applications with a focus on a clean user workflow."
-                     data-tech="C#,ASP.NET,JavaScript,Full-Stack"
-                     data-link="#">
+                     data-tech="tailwind css,HTML,JavaScript"
+                     data-link="https://keamo0713.github.io/ResumeBuilder/">
                     <div class="project-image">
                         <img src="https://images.unsplash.com/photo-1586281380349-632531db7ed4?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w1Nzc0MTR8MHwxfGFsbHx8fHx8fHx8fDE3MjA5NDU1MDh8&ixlib=rb-4.0.3&q=80&w=1080" alt="Resume Builder Project Image" class="project-img">
                     </div>
@@ -118,13 +118,14 @@
                         <h3>Dynamic Resume Builder</h3>
                         <p class="project-description">A full-stack application that allows users to create, manage, and export professional resumes from customizable templates.</p>
                         <div class="tech-stack">
-                            <span class="tech-tag">C#</span>
-                            <span class="tech-tag">Full-Stack</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">HTML</span>
                         </div>
                         <button class="btn btn-outline btn-details">View Details</button>
                     </div>
                 </div>
             </div>
+
         </section>
 
         <section id="team" class="team">
